# ProtFill

./: .dockerignore  .gitignore  README.md  pyproject.toml
configs/test/: protfill_ab.yaml  protfill_ppi_alternative_noise.yaml  protfill_ppi_standard_noise.yaml  protfilldiff.yaml
configs/train/: protfill_ab.yaml  protfill_ppi_alternative_noise.yaml  protfill_ppi_standard_noise.yaml  protfilldiff.yaml
data/splits_dict/: excluded.pickle  test.pickle  valid.pickle
protfill/: model.py
protfill/diffusion/: __init__.py
protfill/layers/: base_models.py  gvp.py  gvp_new.py  gvpe.py
protfill/scripts/: run.py  run_config.py
protfill/utils/: model_utils.py
sample_data/test/: 1a00-1.pickle  1a01-1.pickle  1a04-1.pickle  1a05-1.pickle  1a06-1.pickle  1a0b-1.pickle  1a0c-1.pickle  1a0d-1.pickle  1a0e-1.pickle  1a0f-1.pickle  1a0g-1.pickle  1a0i-1.pickle  1a0j-1.pickle  1a0k-1.pickle  1a0l-1.pickle  1a0p-1.pickle  1a0q-1.pickle  1a0s-1.pickle  1a0u-1.pickle  1a0z-1.pickle
sample_data/train/: 1a15-1.pickle  1a16-1.pickle  1a50-1.pickle  1a55-1.pickle  1a58-1.pickle  1a59-1.pickle  1a5a-1.pickle  1a5b-1.pickle  1a5c-1.pickle  1a5d-1.pickle  1a5f-1.pickle  1a5i-1.pickle  1a5k-1.pickle  1a5l-1.pickle  1a5m-1.pickle  1a5n-1.pickle  1a5o-1.pickle  1a5p-1.pickle  1a5q-1.pickle  1a5s-1.pickle  1a5t-1.pickle  1a5u-1.pickle  1a5v-1.pickle  1a5w-1.pickle  1a5x-1.pickle  1a5y-1.pickle  1a5z-1.pickle  1a65-1.pickle  1a68-1.pickle  1a69-1.pickle  1a6c-1.pickle  1a6d-1.pickle  1a6e-1.pickle  1a6f-1.pickle  1a6g-1.pickle  1a6i-1.pickle  1a6j-1.pickle  1a6k-1.pickle  1a6l-1.pickle  (+48 more)
(+56 files in other folders)
