[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "protfill"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "p_tqdm",
    "pandas",
    "yacs",
    "einops",
    "torch<=1.13",
    "torch_scatter",
    "torch_geometric",
    "pyyaml",
    "proteinflow>=2.2.1",
]

[project.scripts]
protfill = "protfill.scripts.run_config:main"


[tool.setuptools.packages]
find = {}